--- a/index.html
+++ b/index.html
@@ -57,15 +57,23 @@ As pioneers in the city’s ever-evolving architectural narrative, we continue t
 Welcome to Design Space—where imagination meets execution, and every creation is built to last.</p>
   </section>
 
-  <section id="projects" class="section">
-    <h2>Projects</h2>
-    <div class="projects-grid">
-      <div class="project-item"><img src="images/IMG-20231023-WA0184.jpg" alt="Eminent Square"></div>
-      <div class="project-item"><img src="images/Pride.png" alt="Eminent Pride"></div>
-      <div class="project-item"><img src="images/CAM_02_DAY.jpg" alt="Alankruti"></div>
-   
-    </div>
-  </section>
+<section id="projects" class="section">
+  <h2>Projects</h2>
+  <div class="projects-grid">
+    <!-- Project 1 - Eminent Square -->
+    <a href="project1.html" class="project-item">
+      <img src="images/IMG-20231023-WA0184.jpg" alt="Eminent Square">
+    </a>
+    <!-- Project 2 - Eminent Pride -->
+    <a href="project21.html" class="project-item">
+      <img src="images/Pride.png" alt="Eminent Pride">
+    </a>
+    <!-- Project 3 - Alankruti -->
+    <a href="project3.html" class="project-item">
+      <img src="images/CAM_02_DAY.jpg" alt="Alankruti">
+    </a>
+  </div>
+</section>
 
 <!-- Inside #gallery section -->
 <section id="gallery" class="section">
@@ -79,7 +87,7 @@ Welcome to Design Space—where imagination meets execution, and every creation 
     <div class="gallery-item"><img src="images/IMG-20231023-WA0185.jpg" alt="Gallery Image 6" class="gallery-image" onclick="openLightbox(this.src); currentSlide(6)"></div>
     <div class="gallery-item"><img src="images/IMG-20231023-WA0187.jpg" alt="Gallery Image 7" class="gallery-image" onclick="openLightbox(this.src); currentSlide(7)"></div>
     <div class="gallery-item"><img src="images/IMG-20231023-WA0188.jpg" alt="Gallery Image 8" class="gallery-image" onclick="openLightbox(this.src); currentSlide(8)"></div>
-    <div class="gallery-item"><img src="images/mar1124_01a copy (1).png" alt="Gallery Image 9" class="gallery-image" onclick="openLightbox(this.src); currentSlide(9)"></div>
+    <div class="gallery-item"><img src="images/Pride1.png" alt="Gallery Image 9" class="gallery-image" onclick="openLightbox(this.src); currentSlide(9)"></div>
     <div class="gallery-item"><img src="images/Pride.png" alt="Gallery Image 10" class="gallery-image" onclick="openLightbox(this.src); currentSlide(10)"></div>
   </div>
 
