--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://yourdomain.com">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" type="image/png" href="favicon.png" />
-  <title>Design Space</title>
+  <title>A Sqaure</title>
   <link rel="stylesheet" href="style.css" />
 <div id="scroll-progress"></div>
 
