--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Design Space – Portfolio of [Your Name], aspiring architect and designer.">
+  <meta name="description" content="A Sqaure – Portfolio of [Your Name], aspiring architect and designer.">
   <meta name="keywords" content="Architecture, Portfolio, Design, Urban, Studio, Space, India">
   <meta name="author" content="[Your Name]">
   <meta property="og:title" content="Design Space – [Your Name]">
