--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Welcome to Design Space—where imagination meets execution, and every creation 
     <div class="gallery-item"><img src="images/IMG-20231023-WA0185.jpg" alt="Gallery Image 6" class="gallery-image" onclick="openLightbox(this.src); currentSlide(6)"></div>
     <div class="gallery-item"><img src="images/IMG-20231023-WA0187.jpg" alt="Gallery Image 7" class="gallery-image" onclick="openLightbox(this.src); currentSlide(7)"></div>
     <div class="gallery-item"><img src="images/IMG-20231023-WA0188.jpg" alt="Gallery Image 8" class="gallery-image" onclick="openLightbox(this.src); currentSlide(8)"></div>
-    <div class="gallery-item"><img src="images/mar1124_01a copy (1).png" alt="Gallery Image 9" class="gallery-image" onclick="openLightbox(this.src); currentSlide(9)"></div>
+    <div class="gallery-item"><img src="images/Pride1.png" alt="Gallery Image 9" class="gallery-image" onclick="openLightbox(this.src); currentSlide(9)"></div>
     <div class="gallery-item"><img src="images/Pride.png" alt="Gallery Image 10" class="gallery-image" onclick="openLightbox(this.src); currentSlide(10)"></div>
   </div>
 
