--- a/Project21.html
+++ b/Project21.html
@@ -174,7 +174,7 @@
     <section class="hero">
       <h1>Eminent Pride</h1>
       <p>A contemporary take on luxury city living</p>
-      <img src="images/Pride1.png" alt="Urban Residence Main Image">
+      <img src="Pride1.png" alt="Urban Residence Main Image">
 <a href="index.html#contact" class="cta-button">Book a Visit</a>
     </section>
 
