--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="A Sqaure – Portfolio of [Your Name], aspiring architect and designer.">
+  <meta name="description" content="A Square – Portfolio of [Your Name], aspiring architect and designer.">
   <meta name="keywords" content="Architecture, Portfolio, Design, Urban, Studio, Space, India">
   <meta name="author" content="[Your Name]">
   <meta property="og:title" content="Design Space – [Your Name]">
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://yourdomain.com">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" type="image/png" href="favicon.png" />
-  <title>A Sqaure</title>
+  <title>A Square</title>
   <link rel="stylesheet" href="style.css" />
 <div id="scroll-progress"></div>
 
@@ -44,7 +44,7 @@
 
   <section id="about" class="section">
     <h2>About Us</h2>
-    <p>For over two decades, Design Space has stood as a pillar of architectural excellence—shaping skylines, inspiring communities, and setting new benchmarks in design and construction.
+    <p>For over two decades, A Square has stood as a pillar of architectural excellence—shaping skylines, inspiring communities, and setting new benchmarks in design and construction.
 
 Rooted in creativity and built on craftsmanship, we are more than just an architecture firm—we are storytellers of space, sculptors of structure, and stewards of legacy. Our journey began twenty years ago, with a mission to transform visions into enduring realities.
 
@@ -54,7 +54,7 @@ Our in-house construction team brings designs to life with unmatched quality and
 
 As pioneers in the city’s ever-evolving architectural narrative, we continue to innovate, build, and inspire.
 
-Welcome to Design Space—where imagination meets execution, and every creation is built to last.</p>
+Welcome to A Square—where imagination meets execution, and every creation is built to last.</p>
   </section>
 
 <section id="projects" class="section">
